# final-project-delivery

./: .gitignore  README.md
LogicTrack/: README.md  database.py  main.py  models.py  pyproject.toml  requirements.txt  style_manager.py
LogicTrack/assets/icons/: generate_icons.py
LogicTrack/kv/: add_item.kv  dashboard.kv  edit_item.kv  inventory.kv  login.kv  reports.kv  settings.kv  suppliers.kv  theme.kv
LogicTrack/screens/: __init__.py  add_item.py  dashboard.py  edit_item.py  icons.py  inventory.py  login.py  reports.py  settings.py  suppliers.py
LogicTrack/scripts/: __init__.py  setup_environment.py
